@@ -16,6 +16,11 @@ Zollern Galaxy v2.0.15
     - This can be accomplished by an 'all' setting, or on a planet-by-planet basis.
     - The 'all' setting WILL NOT affect Zollus - it will keep whatever tier you set it as.
 * Added several new metals.
+* Added the Ascendant tool type.
+* Added the Bedrock Breaker.
+    - Breaks Bedrock and gives the Player a special metal called Rokkite.
+    - Recharged with Ascendant Amaranth Ingots.
+* 
 * Slightly increased light level of Candy Cube blocks.
 * Massively lowered spawn rate of ores in Xathius.
 * 
